# ThalliumOld

./: .clang-format  Basic.shader  CMakeLists.txt
ECSTesting/: Main.cpp
PhysicsGame/: Main.cpp  ObjLoader.cpp  ObjLoader.hpp  Transform.hpp
PhysicsTesting/: Circle.shader  Main.cpp
PortalTesting/: Camera.cpp  Camera.hpp  Main.cpp
Sandbox/: Color.shader  Main.cpp  Portal.shader
Thallium/: Base.hpp  Clock.cpp  Clock.hpp  IndexBuffer.hpp  Keycode.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp  Ref.hpp  Renderer.hpp  Shader.hpp  VertexBuffer.hpp  Window.hpp  WindowsOpenGLRenderer.cpp  WindowsOpenGLRenderer.hpp  WindowsWindow.cpp  WindowsWindow.hpp
Thallium/Core/: Base.hpp  Clock.cpp  Clock.hpp  Keycode.hpp  Ref.hpp  Transform.hpp  Window.hpp
Thallium/Core/Windows/: WindowsWindow.cpp  WindowsWindow.hpp
Thallium/Renderer/: Framebuffer.hpp  IndexBuffer.hpp  Material.hpp  Renderer.hpp  Shader.hpp  Texture.hpp  VertexBuffer.hpp
Thallium/Renderer/OpenGL/: OpenGLFramebuffer.cpp  OpenGLFramebuffer.hpp  OpenGLIndexBuffer.cpp  OpenGLIndexBuffer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLTexture.cpp  OpenGLTexture.hpp  OpenGLVertexBuffer.cpp  OpenGLVertexBuffer.hpp
Thallium/Renderer/OpenGL/Windows/: WindowsOpenGLRenderer.cpp  WindowsOpenGLRenderer.hpp
Thallium/Scene/: Entity.hpp  Scene.cpp  Scene.hpp  Transform.hpp
src/: Base.hpp  IndexBuffer.hpp  Main.cpp  Matrix.hpp  OpenGLIndexBuffer.hpp  OpenGLRenderer.cpp  OpenGLRenderer.hpp  OpenGLShader.cpp  OpenGLShader.hpp  OpenGLVertexBuffer.hpp  Ref.hpp  Renderer.hpp  Vector.hpp  WindowsOpenGLRenderer.cpp  WindowsOpenGLRenderer.hpp
